<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.re_coded.example.android.simplequiz.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/questionsStyling"
        android:text="@string/first_question" />

        <EditText
            android:id="@+id/first_question_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:maxLines="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_question"
            style="@style/questionsStyling"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/question_2_radio_group">
            <RadioButton
                android:id="@+id/question_2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_question_answer_a"/>
            <RadioButton
                android:id="@+id/question_2_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_question_answer_b"/>
            <RadioButton
                android:id="@+id/question_2_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_question_answer_c"/>
            <RadioButton
                android:id="@+id/question_2_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_question_answer_d"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            style="@style/questionsStyling"
            android:layout_height="wrap_content"
            android:text="@string/third_question" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/question_3_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_answer_a"/>
            <CheckBox
                android:id="@+id/question_3_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_answer_b"/>
            <CheckBox
                android:id="@+id/question_3_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_answer_c"/>
            <CheckBox
                android:id="@+id/question_3_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_question_answer_d"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_question"
            style="@style/questionsStyling"
            />

        <EditText
            android:id="@+id/fourth_question_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionLabel="Done"
            android:maxLines="1"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_answers"
            android:onClick="checkAnswers"/>
    </LinearLayout>

</ScrollView>
